# optimusGPT

./: .gitignore  AGENT_FLOW_DIAGRAM.md  AGENT_FLOW_MERMAID.md  AGENT_FLOW_QUICK_REFERENCE.md  README.md  architectureFlow.txt
Code/: .gitignore  Dockerfile  README.md  docker-compose.yml  executor.Dockerfile  main.py  package.json  pyproject.toml
Code/agent_paths/: iterative_solver.py
Code/agents/: chat_rerun_agent.py  failure_analysis_agent.py  failure_rerun_agent.py  interpreter_agent.py  iterative_decision_agent.py  result_summary_agent.py  self_check_agent.py  solver_agent.py  solver_with_history_agent.py  verify_agent.py  visualizer_agent.py
Code/api/: app.py
Code/data/: example_tsp.csv  exmp_prbm.txt
Code/data/example_problems/: example_scheduling.txt  exmp_investing.txt
Code/data/problem_catagories/: Scheduling
Code/front_end/: App.tsx  README.md  custom.d.ts  index.html  main.tsx  package-lock.json  package.json  svg.d.ts
Code/front_end/src/: App.tsx  main.tsx
Code/front_end/src/api/: client.ts  types.ts  useSolve.ts
Code/front_end/src/components/: Layout.tsx  MainMenu.tsx  Sidebar.tsx
Code/front_end/src/pages/: Home.tsx  Settings.tsx
Code/front_end/src/styles/: index.css
Code/front_end/types/: Sidebar.ts
Code/output_code/: generated_code.py
Code/output_memory/: generated_code.py
Code/workflows/: optimus.py
